--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
 spring.jpa.open-in-view=false
 
+# Carpeta imagenes de equipos
+storage.location=assets/img/equipos/
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
